PN-16717-bluephase: modify test classes