@@ -6,6 +6,7 @@ import it.pagopa.pn.ciechecker.client.s3.S3BucketClientImpl;
 import it.pagopa.pn.ciechecker.exception.CieCheckerException;
 import it.pagopa.pn.ciechecker.generator.challenge.ChallengeResponseBuilder;
 import it.pagopa.pn.ciechecker.model.*;
+import it.pagopa.pn.ciechecker.utils.LogsConstant;
 import it.pagopa.pn.ciechecker.utils.MasterListMergeToolUtility;
 import it.pagopa.pn.ciechecker.utils.ValidateUtils;
 import it.pagopa.pn.mandate.config.PnMandateConfig;
@@ -15,9 +16,13 @@ import org.apache.commons.codec.binary.Hex;
 import org.bouncycastle.asn1.x509.SubjectPublicKeyInfo;
 import org.bouncycastle.cert.X509CertificateHolder;
 import org.bouncycastle.cert.jcajce.JcaX509CertificateHolder;
+import org.bouncycastle.cms.CMSException;
 import org.bouncycastle.cms.CMSSignedData;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.junit.jupiter.api.*;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
@@ -47,8 +52,10 @@ import java.security.spec.InvalidKeySpecException;
 import java.security.spec.RSAPublicKeySpec;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static it.pagopa.pn.ciechecker.utils.CieCheckerConstants.*;
+import static it.pagopa.pn.ciechecker.utils.ValidateUtils.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -160,11 +167,6 @@ class CieCheckerTest {
 //    void validateMandateTest() throws IOException {
 //        log.info("TEST validateMandateTest - INIT... ");
 //
-//        if(validationData.getCieMrtd().getDg1() == null)
-//            validationData.getCieMrtd().setDg1(Files.readAllBytes(dg1Files));
-//        if(validationData.getCieMrtd().getDg11() == null)
-//            validationData.getCieMrtd().setDg11(Files.readAllBytes(dg11Files));
-//
 //        ResultCieChecker result = cieChecker.validateMandate(validationData);
 //        assertEquals("OK",result.getValue());
 //
@@ -172,20 +174,51 @@ class CieCheckerTest {
 //        Mockito.verify(s3BucketClient, Mockito.atLeastOnce())
 //                .getObjectContent(anyString());
 //
-//
 //        log.info("TEST validateMandateTest - END ");
 //    }
 
     @Test
-    void verifyCodFiscDeleganteTest () throws CieCheckerException {
+    void validateInputParameterTest(){
+
+        log.info(" TEST validateInputParameterTest ");
+        assertThrows(CieCheckerException.class,
+                () -> ValidateUtils.validateDataInput(null));
+
+        CieMrtd mrtd = new CieMrtd();
+        mrtd.setSod(null);
+        CieValidationData dataCie = new CieValidationData();
+        CieIas ias = new CieIas();
+        dataCie.setCieIas(ias);
+        dataCie.setCieMrtd(mrtd);
+        assertThrows(CieCheckerException.class,
+                () -> ValidateUtils.validateDataInput(dataCie));
+
+        log.info(" TEST validateInputParameterTest - END");
+    }
+
+    @Test
+    void loadCertificateFromPemFileNULLTest() throws FileNotFoundException {
+        log.info(" TEST loadCertificateFromPemFileNULLTest ");
+        //
+        assertThrows(CieCheckerException.class,
+                () -> ValidateUtils.loadCertificateFromPemFile(null));
+
+        File file = new File(certificatoPathTest.toUri());
+        List<X509Certificate> certList = ValidateUtils.loadCertificateFromPemFile(new FileInputStream(file));
+        assertTrue(certList.size()==1);
+        log.info(" TEST loadCertificateFromPemFileNULLTest - END");
+    }
+
+    @Test
+    void verifyCodFiscDelegante_FalsoVeroTest () throws CieCheckerException {
 
         validationData.setCodFiscDelegante("RSSDNC42R01H501Y");
         ResultCieChecker resultKO = cieCheckerInterface.verifyCodFiscDelegante(validationData);
-        log.info("Risultato atteso OK -> " + resultKO.getValue());
+        log.info("Risultato atteso KO -> " + resultKO.getValue());
         assertNotEquals(OK, resultKO.getValue());
 
         try {
-			validationData.setCodFiscDelegante(cleanString(basePath.resolve("CODFISC.txt")));
+            validationData.setCodFiscDelegante(cleanString(basePath.resolve("CODFISC.txt"))); //m
 		} catch (IOException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
@@ -203,21 +236,13 @@ class CieCheckerTest {
         assertEquals(OK, resultOK.getValue());
     }
 
-//    @Test
-//    void extractCscaAnchorFromZipPathTest() {
-//
-//        List<X509Certificate> x509List = ValidateUtils.extractCscaAnchorFromZipPath(Path.of(cscaAnchorZipFile.getCscaAnchorPathFileName()));
-//        Assertions.assertFalse(x509List.isEmpty());
-//        log.info("x509List.size: {}" , x509List.size());
-//    }
-
 
     @Test
     void extractS3ComponentsTest(){
-        String inputUri = "s3://dgs-temp-089813480515/IT_MasterListCSCA.zip";
-        String[] stringArray = ValidateUtils.extractS3Components(inputUri); //masterListCSCAZip_S3); //  inputUri);
+        //String inputUri = "s3://dgs-temp-089813480515/IT_MasterListCSCA.zip";
+        String[] stringArray = ValidateUtils.extractS3Components(masterListCSCAZip_S3); //  inputUri);
         //InputStream fileInputStream = cieCheckerInterface.getContentCscaAnchorFile(inputUri); //getContentCscaAnchorFile(this.getCscaAnchorPathFileName());
-        //List<X509Certificate> x509CertList  = ValidateUtils.extractCscaAnchorFromZip(fileInputStream);
+        //List<X509Certificate> x509CertList = ValidateUtils.extractCscaAnchorFromZip(fileInputStream);
         for(String a : stringArray) {
             log.info("stringArray {} ", a);
         }
@@ -225,20 +250,12 @@ class CieCheckerTest {
     }
 
 
-
-    public static byte[] hexFile(String toHex) throws DecoderException {
-        return Hex.decodeHex(toHex);
-    }
-
-    public static String cleanString(Path file) throws IOException {
-        return Files.readString(file).replaceAll("\\s+", "");
-    }
-
     @Test
     void checkExtractChallengeTest() {
 
         log.info("TEST verifyChallengeFromSignature - INIT... ");
-        assertNotNull(validationData.getCieIas().getPublicKey());       assertNotNull( validationData.getSignedNonce());
+        assertNotNull(validationData.getCieIas().getPublicKey());
+        assertNotNull( validationData.getSignedNonce());
         assertNotNull(validationData.getNonce());
 
         ResultCieChecker result = cieCheckerInterface.verifyChallengeFromSignature(validationData);
@@ -267,6 +284,24 @@ class CieCheckerTest {
         assertEquals(modulus, ((RSAPublicKey)generatedPublic).getModulus());
         assertEquals(publicExponent, pkcs1PublicKey.getPublicExponent());
         log.info("TEST generatedPublic - END ");
+    }
+
+    @Test
+    public void testVerifyIntegrity() throws IOException, DecoderException {
+        log.info("TEST testVerifyIntegrityOk - INIT ");
+
+        byte[] dg1 = hexFile(Files.readString(dg1Files));
+        byte[] dg11 = hexFile(Files.readString(dg11Files));
+
+        CieMrtd mrtd = new CieMrtd();
+        mrtd.setSod(truncatedSODMRTD);
+        mrtd.setDg1(dg1);
+        mrtd.setDg11(dg11);
+        validationData.setCieMrtd(mrtd);
+
+        ResultCieChecker result = cieCheckerInterface.verifyIntegrity(validationData.getCieMrtd());
+        Assertions.assertTrue(result.getValue().equals(OK));
+        log.info("TEST testVerifyIntegrityOk - END ");
     }
 
     @Test
@@ -302,38 +337,42 @@ class CieCheckerTest {
 
 //    @Test
 //    void testVerifyIntegrityFailDG1() throws Exception {
-//        byte[] sod = Files.readAllBytes(sodFile);
 //
 //        // DG1 corrotto (modifica 1 byte)
-//        byte[] dg1 = Files.readAllBytes(dg1FilesCorrupted);
+//        byte[] dg1 = hexFile(Files.readString(dg1FilesCorrupted));
+//        byte[] dg11 = hexFile(Files.readString(dg11Files));
 //
 //        CieMrtd mrtd = new CieMrtd();
-//        mrtd.setSod(sod);
+//        mrtd.setSod(truncatedSODMRTD ); //sod);
 //        mrtd.setDg1(dg1);
-//        mrtd.setDg11(dg1);
+//        mrtd.setDg11(dg11);
 //
-//        ResultCieChecker result = CieCheckerImpl.verifyIntegrity(mrtd);
-//        assertEquals(ResultCieChecker.KO_EXC_NOT_SAME_DIGEST, result, "Digest mismatch between expected and actual DG");
-//        //assertFalse(ResultCieChecker.OK.getValue().equals(OK));
+//        log.info("Risultato atteso del test Errore: CieCheckerException - Message: Digest mismatch between expected and actual DG1");
+//        assertThrows(CieCheckerException.class,
+//                () -> cieCheckerInterface.verifyIntegrity(mrtd));
+//
+//        log.info("TEST testVerifyIntegrityFailDG1 - END ");
 //    }
 
 
 //    @Test
 //    void testVerifyIntegrityFailDG11() throws Exception {
-//        byte[] sod = Files.readAllBytes(sodFile);
 //
-//        byte[] dg1 = Files.readAllBytes(dg1Files);
-//
+//        byte[] dg1 = hexFile(Files.readString(dg1Files));
 //        // DG11 corrotto (mancano dei caratteri)
-//        byte[] dg11 = Files.readAllBytes(dg11FilesCorroupted);
+//        byte[] dg11 = hexFile(Files.readString(dg11FilesCorroupted));
 //
 //        CieMrtd mrtd = new CieMrtd();
-//        mrtd.setSod(sod);
+//        mrtd.setSod(truncatedSODMRTD);
 //        mrtd.setDg1(dg1);
 //        mrtd.setDg11(dg11);
 //
-//        ResultCieChecker result = cieChecker.verifyIntegrity(mrtd);
-//        assertEquals(ResultCieChecker.KO_EXC_NOT_SAME_DIGEST, result, "DG11 corrotto deve dare KO");
+//        log.info("Risultato atteso del test Errore: CieCheckerException - Message: Digest mismatch between expected and actual DG11");
+//
+//        assertThrows(CieCheckerException.class,
+//                () -> cieCheckerInterface.verifyIntegrity(mrtd));
+//
+//        log.info("TEST testVerifyIntegrityFailDG11 - END ");
 //    }
 
 
@@ -351,20 +390,11 @@ class CieCheckerTest {
         return Base64.getDecoder().decode(b64);
     }
 
-    @Test
-    public void testVerifyIntegrity()  {
-        log.info("TEST testVerifyIntegrityOk - INIT ");
-
-
-        assertThrows(CieCheckerException.class,
-                () -> cieCheckerInterface.verifyIntegrity(validationData.getCieMrtd()));
-        log.info("TEST testVerifyIntegrityOk - END ");
-    }
-
 
     @Test
-    void mergeTest() throws FileNotFoundException {
+    void MasterListMergeToolTest() throws FileNotFoundException {
 
+        log.info("TEST " + LogsConstant.MASTERLISTMERGETOOL_MERGE);
         String cscaPath = "s3://pn-runtime-environment-variables-eu-south-1-830192246553/pn-mandate/csca-masterlist/";
 
         //Include nello ZIP file "/new_IT_MasterListCSCA.zip" il file "/catest.pem"
@@ -389,10 +419,14 @@ class CieCheckerTest {
 
         ResultCieChecker result = master.merge(); //originalMasterListZip, fileToAddMasterListZip);
         Assertions.assertTrue(result.getValue().equals(OK));
+
+        log.info("TEST MasterListMergeToolTest - END ");
     }
 
     @Test
-    void uploadContentTest() throws Exception {
+    void MasterListUploadContentTest() throws Exception {
+
+        log.info("TEST " + LogsConstant.MASTERLISTMERGETOOL_UPLOADMASTERZIPTOS3);
 
         String cscaPath = "s3://pn-runtime-environment-variables-eu-south-1-830192246553/pn-mandate/csca-masterlist";
 
@@ -404,52 +438,13 @@ class CieCheckerTest {
 
         when(clientS3.putObject(any(PutObjectRequest.class), any(RequestBody.class)))
                 .thenReturn(PutObjectResponse.builder().build());
+
         ResultCieChecker result = master.writeNewMasterZip(inStream);
         Assertions.assertTrue(result.getValue().equals(OK));
 
-        log.info("TEST writeNewMasterZip - END ");
+        log.info("TEST MasterListMergeToolUtility - "+ LogsConstant.MASTERLISTMERGETOOL_UPLOADMASTERZIPTOS3+ " - END ");
     }
 
-    @Test
-    void generateChallengeTest() throws Exception { //TODO to move in generator test package
-
-        log.info("TEST generateSignedNonce - INIT... ");
-        assertNotNull(validationData.getCieIas().getPublicKey());
-        assertNotNull(validationData.getNonce());
-
-        byte[] certificatoByte = Files.readAllBytes(certificatoPathTest);
-        byte[] privateKeyByte = Files.readAllBytes(privatekeyPathTest);
-
-        X509Certificate certX509 = (X509Certificate) CertificateFactory.getInstance("X.509", new BouncyCastleProvider())
-                .generateCertificate(new ByteArrayInputStream(certificatoByte));
-        X509CertificateHolder holder = new JcaX509CertificateHolder(certX509);
-
-        System.out.println("Certificato caricato: " + certX509.getSubjectDN());
-
-        PrivateKey privateKey = ValidateUtils.parsePrivateKey(privateKeyByte);
-
-        byte[] publicKeyByte = certX509.getPublicKey().getEncoded();
-        SubjectPublicKeyInfo spki = SubjectPublicKeyInfo.getInstance(publicKeyByte);
-        byte[] rawRsaKeyBytes = spki.getPublicKeyData().getBytes();
-
-        CieIas ias = new CieIas();
-        ias.setPublicKey( rawRsaKeyBytes ); //publicKeyByte);
-        validationData = new CieValidationData();
-        validationData.setNonce("02461");
-        validationData.setCieIas(ias);
-
-        byte[] signedNonce = ChallengeResponseBuilder.signNonce(validationData.getNonce(), privateKey);
-
-        validationData.setSignedNonce(signedNonce);
-        String signedNonceBase64 = Base64.getEncoder().encodeToString(validationData.getSignedNonce());
-
-        System.out.println("Nonce: " + validationData.getNonce());
-        System.out.println("SignedNonce (Base64): " + signedNonceBase64);
-        ResultCieChecker result = cieCheckerInterface.verifyChallengeFromSignature(validationData);
-        Assertions.assertTrue(result.getValue().equals(OK));
-
-        log.info("TEST generateSignedNonce - END ");
-    }
 
     @Test
     void verifyDscAgainstAnchorBytes_edgeCases() throws Exception {
@@ -472,9 +467,9 @@ class CieCheckerTest {
                 () ->ValidateUtils.verifyDscAgainstTrustBundle(null, List.of(ca), null));
 
         // anchors null
-        byte[] pkcs7 = hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX)));
-        byte [] sod = Arrays.copyOfRange(pkcs7, 4, pkcs7.length);
-        CMSSignedData cms = new CMSSignedData(sod);
+        //byte[] pkcs7 = hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX)));
+        //byte [] sod = Arrays.copyOfRange(pkcs7, 4, pkcs7.length);
+        CMSSignedData cms = new CMSSignedData(truncatedSODIAS);
         X509CertificateHolder certHolder = ValidateUtils.extractDscCertDer(cms);
         byte[] dscDer = certHolder.getEncoded();
         assertThrows(CieCheckerException.class,
@@ -537,49 +532,52 @@ class CieCheckerTest {
 //
 //      log.info("=== FINE TEST [" + tipo + "] ===");
 //  }
-//  private static Stream<Arguments> cieSources() throws IOException, DecoderException {
-//      return Stream.of(
-//              Arguments.of("CIE MRTD",hexFile(Files.readString(basePath.resolve(SOD_MRTD_HEX)))),
-//              Arguments.of("CIE IAS", hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX))))
-//              
-//      );
-//  }
+  private static Stream<Arguments> cieSources() throws IOException, DecoderException {
+      return Stream.of(
+              Arguments.of("CIE MRTD",hexFile(Files.readString(basePath.resolve(SOD_MRTD_HEX)))),
+              Arguments.of("CIE IAS", hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX))))
+
+      );
+  }
 //
 //// TODO to uncomment when useful test data are available
 //// INIT TEST LETTURA FILE ZIP DELLA CATENA DI CERTIFICATI E VALIDAZIONE
 //      @Test
 //      void verifyDscAgainstAnchorBytes_derDsc_pemZIP_true() throws Exception {
 //          log.info("TEST verifyDscAgainstAnchorBytes_derDsc_pemZIP_true - INIT ");
-//  
-//          byte[] pkcs7 = hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX)));
-//          assertNotNull(pkcs7);
-//          byte [] sod = Arrays.copyOfRange(pkcs7, 4, pkcs7.length);
-//          CMSSignedData cms = new CMSSignedData(sod);
+//
+//          //byte[] pkcs7 = hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX)));
+//          assertNotNull(truncatedSODIAS);
+//          //byte [] sod = Arrays.copyOfRange(pkcs7, 4, pkcs7.length);
+//          CMSSignedData cms = new CMSSignedData(truncatedSODIAS);
 //          X509CertificateHolder certHolder = ValidateUtils.extractDscCertDer(cms);
 //          byte[] dscDer = certHolder.getEncoded();
 //          List<X509Certificate> cscaAnchor = cieCheckerInterface.getCscaAnchor();   //extractCscaAnchor();
-//  System.out.println("cscaAnchor 3: " + cscaAnchor);
+//
+//          Assertions.assertNotNull(cscaAnchor);
+//          log.info("cscaAnchor SIZE: {}", cscaAnchor.size());
+//
 //          ResultCieChecker result =
 //                  ValidateUtils.verifyDscAgainstTrustBundle(dscDer, cscaAnchor, null);
-//  
+//
 //          log.info("Risultato atteso OK -> " + result.getValue());
 //          assertEquals(OK, result.getValue());
-//  
+//
 //          log.info("TEST verifyDscAgainstAnchorBytes_derDsc_pemZIP_true - END ");
-//  
+//
 //      }
 //
 //// TODO to uncomment when useful test data are available    
 //  @Test
 //  void verifyDscAgainstAnchorBytes_pemDsc_pemBundle_true() throws Exception {
 //
-//      byte[] pkcs7 = hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX)));
-//      byte [] sod = Arrays.copyOfRange(pkcs7, 4, pkcs7.length);
-//      CMSSignedData cms = new CMSSignedData(sod);
+//      //byte[] pkcs7 = hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX)));
+//      //byte [] sod = Arrays.copyOfRange(pkcs7, 4, pkcs7.length);
+//      CMSSignedData cms = new CMSSignedData(truncatedSODIAS);
 //      X509CertificateHolder certHolder = ValidateUtils.extractDscCertDer(cms);
 //      byte[] dscPem = toPem(certHolder.getEncoded());
 //      cieCheckerInterface.setCscaAnchor(cieCheckerInterface.getCscaAnchor()); ///extractCscaAnchor());
-//      System.out.println("cscaAnchor 4 : " + cieCheckerInterface.getCscaAnchor());
+//      System.out.println("cscaAnchor Size: " + cieCheckerInterface.getCscaAnchor().size());
 //      ResultCieChecker resultCieChecker =ValidateUtils.verifyDscAgainstTrustBundle(dscPem, cieCheckerInterface.getCscaAnchor(), null);
 //      log.info("TEST resultCieChecker: " + resultCieChecker.getValue());
 //
@@ -592,9 +590,9 @@ class CieCheckerTest {
 //      var cf = CertificateFactory.getInstance(X_509);
 //
 //      // DSC (DER)
-//      byte[] pkcs7 = hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX)));
-//      byte [] sod = Arrays.copyOfRange(pkcs7, 4, pkcs7.length);
-//      CMSSignedData cms = new CMSSignedData(sod);
+//      //byte[] pkcs7 = hexFile(Files.readString(basePath.resolve(SOD_IAS_HEX)));
+//      //byte [] sod = Arrays.copyOfRange(pkcs7, 4, pkcs7.length);
+//      CMSSignedData cms = new CMSSignedData(truncatedSODIAS);
 //      X509CertificateHolder certHolder = ValidateUtils.extractDscCertDer(cms);
 //      byte[] dscDer = certHolder.getEncoded();
 //      X509Certificate dscX509 = (X509Certificate) cf.generateCertificate(new ByteArrayInputStream(dscDer));
@@ -627,6 +625,8 @@ class CieCheckerTest {
 //              removed++;
 //      }
 //      assertTrue(removed > 0);
+//      log.info("wrongAnchorBlobs size: {}", wrongAnchorBlobs.size());
+//      log.info("wrongAnchorX509 size: {}", wrongAnchorX509.size());
 //
 //      assertThrows(CieCheckerException.class,
 //              () -> ValidateUtils.verifyDscAgainstTrustBundle(dscDer, wrongAnchorX509, null));
